tests/derive_compile_fail/by_position_with_rename_all.stderr
error: `by_position` cannot be combined with `rename_all`
 --> tests/derive_compile_fail/by_position_with_rename_all.rs:5:8
  |
5 | struct Bad(i64, String);
  |        ^^^
